2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (zos-diffout): New target.
	(EXPECTED_FAIL_ZOS): Add more tests to the list.

2020-03-09         Andrew J. Schorr      <aschorr@telemetry-investments.com>

	* symtab11.ok: Update for @val_type_asc ordering changes.

2020-03-09         Arnold D. Robbins     <arnold@skeeve.com>

	* beginfile2.ok, funsmnam.ok, incdupe4.ok, incdupe5.ok, incdupe6.ok,
	incdupe7.ok, lintold.ok, nofile.ok, nulinsrc.ok, paramasfunc1.ok,
	paramasfunc2.ok, paramres.ok, space.ok: Update after code changes.

2020-03-07         Arnold D. Robbins     <arnold@skeeve.com>

	* symtab11.awk, symtab11.ok: Add value of array elements
	to the output.

2020-03-06         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile5): Use AWKPATH so that out-of-tree
	builds work correctly.

2020-02-09         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile5): Append results of stderr to the
	test output. Thanks to John Malmberg for the report.
	* profile5.ok: Updated.

2020-01-26         Arnold D. Robbins     <arnold@skeeve.com>

	* functab4.awk: Code changes to avoid race conditions
	calling stat on the test directory. Thanks to
	Michal Jaegermann and Andrew J. Schorr.
	* Makefile.am: Fix lack of backslash continuation and
	regenerate.

2020-01-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, symtab11.
	* symtab11.awk, symtab11.ok: New files.

2020-01-19         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): New test, profile13.
	* profile13.awk, profile13.ok: New files.
	* profile5.ok: Updated after code changes.

2020-01-08         Arnold D. Robbins     <arnold@skeeve.com>

	* indirectbuiltin.awk, numrange.awk, numrange.ok: Changes
	after code changes.
	* Makefile.am (EXTRA_DIST): New tests, stupid1 and stupid2.
	* stupid1.awk, stupid1.ok: New files.
	* stupid2.awk, stupid2.ok: New files.