@@ -1,3 +1,8 @@
+2020-03-18         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (zos-diffout): Change per request from
+	Daniel Richard G.
+
 2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (zos-diffout): New target.
